# OpenDevX

./: .editorconfig  .gitattributes  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  ENGINEERING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SETUP.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  dependencies.py
apps/api/app/api/v1/: __init__.py  health.py
apps/api/app/core/: exceptions.py  logging.py  settings.py
apps/api/app/schemas/: __init__.py  health.py
apps/api/app/services/: __init__.py
apps/api/tests/: test_health.py  test_scaffold.py
apps/web/: .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/app/: App.tsx
apps/web/src/test/: scaffold.test.ts  setup.ts
docs/adr/: README.md
