[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "opendevx-api"
version = "0.0.0"
description = "OpenDevX FastAPI service scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.121,<1",
  "uvicorn[standard]>=0.30,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
